--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://denisnascimento04.github.io/pokedex-offline/",
+  "homepage": "https://github.com/DenisNascimento04/pokedex-offline",
   "name": "site-pokemon-offline",
   "version": "0.1.0",
   "private": true,
